fixing wwhite margin gap on right

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -896,6 +896,10 @@ form .button {
 	.footer p {
 		font-size: 12px;
 	}
+	.row {
+  padding-right: 0px;
+  margin-right: 0px;
+}
 }
 @media (min-width: 768px) {
 	.modal-fullscreen .modal-dialog {
